--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,7 +124,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':library')
     compile(name: 'ucrop-1.0.1', ext: 'aar')
     compile(name: 'bottom-navigation-bar-1.3.0', ext: 'aar')
     //    compile 'com.ashokvarma.android:bottom-navigation-bar:1.2.0'
@@ -141,8 +140,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
+    compile 'com.huxq17.xrefreshview:xrefreshview:3.6.0'
+    //依赖下面的库
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.0.1'
 }
 
