--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,5 +146,6 @@ dependencies {
     //依赖下面的库
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:support-v4:23.0.1'
+    compile files('libs/alipaySingle-20161222.jar')
 }
 
