--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     compile(name: 'ucrop-1.0.1', ext: 'aar')
     compile(name: 'bottom-navigation-bar-1.3.0', ext: 'aar')
     //    compile 'com.ashokvarma.android:bottom-navigation-bar:1.2.0'
+
     //    compile 'com.yalantis:ucrop:1.0.1'
     compile files('libs/locSDK_6.13.jar')
     compile files('libs/core-3.0.0.jar')
@@ -147,7 +148,6 @@ dependencies {
     compile files('libs/eventbus-3.0.0.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile 'com.huxq17.xrefreshview:xrefreshview:3.6.0'
@@ -156,5 +156,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.1'
     compile files('libs/alipaySingle-20161222.jar')
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    compile files('libs/Xg_sdk_v2.47_20161026_0936.jar')
+    compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
+    compile files('libs/jg_filter_sdk_1.1.jar')
 }
 
