--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,5 +159,6 @@ dependencies {
     compile files('libs/Xg_sdk_v2.47_20161026_0936.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
     compile files('libs/jg_filter_sdk_1.1.jar')
+    compile 'com.kyleduo.switchbutton:library:1.4.4'
 }
 
