--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,49 +92,36 @@
         <!-- </receiver> -->
 
 
-
-        <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
-        <activity
-            android:name="com.tencent.android.tpush.XGPushActivity"
-            android:exported="false"
-            android:theme="@android:style/Theme.Translucent">
-            <intent-filter>
-
-                <!-- 若使用AndroidStudio，请设置android:name="android.intent.action" -->
-                <action android:name="ndroid.intent.action" />
-            </intent-filter>
-        </activity>
-
         <!-- 【必须】 信鸽receiver广播接收 -->
         <receiver
             android:name="com.tencent.android.tpush.XGPushReceiver"
             android:process=":xg_service_v2">
             <intent-filter android:priority="0x7fffffff">
-
                 <!-- 【必须】 信鸽SDK的内部广播 -->
                 <action android:name="com.tencent.android.tpush.action.SDK" />
                 <action android:name="com.tencent.android.tpush.action.INTERNAL_PUSH_MESSAGE" />
-                <!-- 【必须】 系统广播：网络切换 -->
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-
-                <!-- 【可选】 系统广播：开屏 -->
+                <!-- 【必须】 系统广播：开屏和网络切换 -->
                 <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
 
                 <!-- 【可选】 一些常用的系统广播，增强信鸽service的复活机会，请根据需要选择。当然，你也可以添加APP自定义的一些广播让启动service -->
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
             </intent-filter>
-            <!-- 【可选】 usb相关的系统广播，增强信鸽service的复活机会，请根据需要添加 -->
-            <intent-filter android:priority="0x7fffffff">
-                <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
-                <action android:name="android.intent.action.MEDIA_REMOVED" />
-                <action android:name="android.intent.action.MEDIA_CHECKING" />
-                <action android:name="android.intent.action.MEDIA_EJECT" />
-
-                <data android:scheme="file" />
-            </intent-filter>
         </receiver>
+
+        <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
+        <!-- 【注意】 如果被打开的activity是启动模式为SingleTop，SingleTask或SingleInstance，请根据通知的异常自查列表第8点处理-->
+        <activity
+            android:name="com.tencent.android.tpush.XGPushActivity"
+            android:exported="false">
+            <intent-filter>
+                <!-- 若使用AndroidStudio，请设置android:name="android.intent.action"-->
+                <action android:name="android.intent.action" />
+            </intent-filter>
+        </activity>
+
         <!-- 【必须】 信鸽service -->
         <service
             android:name="com.tencent.android.tpush.service.XGPushService"
@@ -142,103 +129,83 @@
             android:persistent="true"
             android:process=":xg_service_v2" />
 
-        <!-- 【必须】 通知service，其中android:name部分要改为当前包名 -->
+        <!-- 【必须】 通知service，此选项有助于提高抵达率 -->
         <service
             android:name="com.tencent.android.tpush.rpc.XGRemoteService"
             android:exported="true">
             <intent-filter>
-
-                <!-- 【必须】 请修改为当前APP名包.PUSH_ACTION，如demo的包名为：com.qq.xgdemo -->
                 <action android:name="com.express56.xq.PUSH_ACTION" />
             </intent-filter>
         </service>
-        <service
-            android:name=".service.UploadService"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="com.express56.xq.UPLOAD_SERVICE" />
-            </intent-filter>
-        </service>
-
-        <!-- 【可选】信鸽拉起其他APP应用，若应用在本地找不到可以自动下载 -->
-        <!--
-              <service
-            android:name="com.tencent.android.tpush.XGDownloadService"
-            android:enabled="true"
-            android:exported="false" />
-        -->
-        <!-- 【可选】APP实现的Receiver，用于接收消息透传和操作结果的回调，请根据需要添加 -->
-        <!-- YOUR_PACKAGE_PATH.CustomPushReceiver需要改为自己的Receiver： -->
-        <receiver
-            android:name=".receiver.MsgPushReceiver"
-            android:exported="true">
-            <intent-filter>
-
-                <!-- 接收消息透传 -->
-                <action android:name="com.tencent.android.tpush.action.PUSH_MESSAGE" />
-                <!-- 监听注册、反注册、设置/删除标签、通知被点击等处理结果 -->
-                <action android:name="com.tencent.android.tpush.action.FEEDBACK" />
-            </intent-filter>
-        </receiver>
 
         <!-- 【必须】 请修改为APP的AccessId，“21”开头的10位数字，中间没空格 -->
         <meta-data
             android:name="XG_V2_ACCESS_ID"
-            android:value="2100212417" />
+            android:value="2100252595" />
         <!-- 【必须】 请修改为APP的AccessKey，“A”开头的12位字符串，中间没空格 -->
         <meta-data
             android:name="XG_V2_ACCESS_KEY"
-            android:value="AU85GPL792AM" />
+            android:value="A8N38H41TMKH" />
 
-        <activity android:name=".activity.MyExpressActivity"
+        <activity
+            android:name=".activity.MyExpressActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.AreaPriceSetActivity"
+        <activity
+            android:name=".activity.AreaPriceSetActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.PlaceOrderEditActivity"
+        <activity
+            android:name=".activity.PlaceOrderEditActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.PlaceOrderShowActivity"
+        <activity
+            android:name=".activity.PlaceOrderShowActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.ReceivingOrderActivity"
+        <activity
+            android:name=".activity.ReceivingOrderActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.InfoSettingActivity"
+        <activity
+            android:name=".activity.InfoSettingActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.OfferActivity"
-                  android:launchMode="singleTop"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="adjustPan"/>
-
-        <activity android:name=".activity.ReceivingOrderShowActivity"
-                  android:launchMode="singleTop"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="adjustPan"/>
-
-        <activity android:name=".activity.PlaceOrderShowActivityaa"
+        <activity
+            android:name=".activity.OfferActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.PaymentActivity"
+        <activity
+            android:name=".activity.ReceivingOrderShowActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
+            android:name=".activity.PlaceOrderShowActivityaa"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
+            android:name=".activity.PaymentActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
         <activity
             android:name=".activity.RegisterActivity"
@@ -332,15 +299,13 @@
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name="com.alipay.sdk.app.H5AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
 
     </application>
