--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -207,6 +207,18 @@
             android:windowSoftInputMode="adjustPan" />
 
         <activity
+            android:name=".activity.RechargeRecordActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
+            android:name=".activity.MallTypeActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
             android:name=".activity.PlaceOrderShowActivityaa"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
