--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -213,6 +213,12 @@
             android:windowSoftInputMode="adjustPan" />
 
         <activity
+            android:name=".activity.MyAccountActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
             android:name=".activity.MallTypeActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
