--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ def loadProperties() {
 //loadProperties()
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId 'com.express56.xq'
@@ -146,7 +146,7 @@ dependencies {
     compile files('libs/junit-4.12.jar')
     compile files('libs/okhttp-3.2.0.jar')
     compile files('libs/eventbus-3.0.0.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
@@ -160,5 +160,7 @@ dependencies {
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
     compile files('libs/jg_filter_sdk_1.1.jar')
     compile 'com.kyleduo.switchbutton:library:1.4.4'
+    compile 'com.jaeger.statusbaruitl:library:1.3.6'
+    compile 'com.android.support:design:25.1.0'
 }
 
