--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,5 +162,6 @@ dependencies {
     compile 'com.kyleduo.switchbutton:library:1.4.4'
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.tencent.bugly:crashreport:latest.release'
 }
 
